--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
@@ -21,8 +23,10 @@
     "d3": "^5.15.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "husky": "^4.2.5",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "lint-staged": "^10.1.3",
     "qrcode": "^1.4.4",
     "uuid": "^7.0.2",
     "view-design": "^4.1.3",
@@ -50,5 +54,16 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "lint-staged": {
+    "*.{js,vue}": [
+      "vue-cli-service lint"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
 }
